[package]
name = "tokio_util_watchdog"
version = "0.1.2"
authors = ["beck.ct@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.74"
repository = "https://github.com/cbeck88/tokio_util_watchdog"
description = "A watchdog utility for tokio runtimes"
categories = ["asynchronous", "development-tools::debugging"]
keywords = [
  "async",
  "tokio",
  "utility",
  "watchdog",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "time"] }
tracing = { version = "0.1" }
