[package]
name = "tokio_util_watchdog"
version = "0.2.0"
authors = ["beck.ct@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.74"
repository = "https://github.com/cbeck88/tokio_util_watchdog"
description = "A watchdog utility for tokio runtimes"
categories = ["asynchronous", "development-tools::debugging"]
keywords = [
  "async",
  "tokio",
  "utility",
  "watchdog",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tokio_unstable)', 'cfg(tokio_taskdump)'] }

[dependencies]
tokio = { version = "1.48", features = ["rt", "time"] }
tracing = { version = "0.1" }

# taskdump is only supported on linux x86/x86_64/aarch64
[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
tokio = { version = "1.48", features = ["taskdump"] }
